fixed horizontal scrollbar issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -318,7 +318,7 @@ section {
 }
 
 #counter {
-  padding: 4px;
+  padding: 4px 0;
   width: 100%;
 }
 
